# diesel-factories

./: CHANGELOG.md
diesel-factories/: Cargo.toml
diesel-factories-code-gen/: Cargo.toml
diesel-factories-code-gen/src/: lib.rs
diesel-factories/src/: lib.rs
diesel-factories/tests/: async_integration_test.rs  docs_setup_with_city_factory.rs  integration_test.rs
diesel-factories/tests/docs_include/: setup_with_city_factory.rs
