[package]
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
categories = ["database"]
description = "Test factories for Diesel"
documentation = "https://docs.rs/diesel-factories"
edition = "2018"
homepage = "https://github.com/davidpdrsn/diesel-factories"
keywords = ["web", "diesel", "sql"]
license = "MIT"
name = "diesel-factories"
readme = "README.md"
repository = "https://github.com/davidpdrsn/diesel-factories.git"
version = "2.0.0"

[features]
default = ["sync"]
sync = ["diesel-factories-code-gen/sync"]
async = ["diesel-factories-code-gen/async", "diesel-async"]

[[test]]
name = "integration_test"
required-features = ["sync"]

[[test]]
name = "async_integration_test"
required-features = ["async"]

[dependencies]
diesel = { version = "2.0.0" }
diesel-async = { version = "0.5", optional = true }
diesel-factories-code-gen = { version = "2.0.0", path = "../diesel-factories-code-gen" }

[dev-dependencies]
diesel = { version = "2.0.0", features = ["postgres", "network-address"] }
diesel-async = { version = "0.5", features = ["postgres"] }
tokio = { version = "1", features = ["macros"] }
trybuild = "1.0.3"
